--- a/index.html
+++ b/index.html
@@ -12,21 +12,27 @@
 
     <H1>Minesweeper</H1>
     <div class="timer"></div>
-    
+    <div class= "modal"></div>
+
     <div class="level">
         <select name="dificulty" class="dificulty" onchange="selectLevel()">
             <option value="Begginer">Begginer</option>
             <option value="Medium">Medium</option>
             <option value="Expert">Expert</option>
         </select>
-        
-        <div class="timer"></div>
-</div>
-<button class="smiley" onclick="init();">😀</button>
 
-<div class="board">
-</div>
+    </div>
+    <div class="life"></div>
 
+    <button class="smiley" onclick="init();">😀</button>
+
+    <div class="hint"></div>
+
+
+    <div class="board">
+    </div>
+
+    <button class="manual" onclick="setManualMode(this)">Manual positioning</button>
 
     <script src="js/util.js"></script>
     <script src="js/main.js"></script>
