spell fix "beginner"

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="level">
         <select name="dificulty" class="dificulty" onchange="selectLevel()">
-            <option value="Beginner">Begginer</option>
+            <option value="Beginner">Beginner</option>
             <option value="Medium">Medium</option>
             <option value="Expert">Expert</option>
         </select>
